# RAG-from-scratch-with-langchain-and-langgraph

./: README.md  pyproject.toml  requirements.txt
1 - Data Ingestion and Parsing/: 01_Data_Ingestion.ipynb  02_Parsing_PDF_Documents.ipynb  03_Parsing_Word_Documents.ipynb  04_Parsing_CSV_and_Excel.ipynb  05_Parsing_JSON_Data.ipynb  06_Parsing_SQL_Databases.ipynb
2 - Vector Embeddings/: 01_HuggingFace_Embeddings.ipynb  02_OpenAI_Embeddings.ipynb
3 - Vector Store and Vector Database/: 1- Traditional_RAG_with_Chromadb.ipynb  2- Building_RAG_FAISS.ipynb  3_Pinecone_VectorDB.ipynb
3 - Vector Store and Vector Database/chroma_db/: chroma.sqlite3
3 - Vector Store and Vector Database/faiss_index/: index.faiss  index.pkl
3 - Vector Store and Vector Database/text_files/: doc_0.txt  doc_1.txt  doc_2.txt
4 - Advance Chunking and Preprocessing/: 1_Semantic_Chunking.ipynb  paul_graham_essay.txt
5 - Hybrid Search Strategies/: 0 - Hybrid_Search_Theoretical_Explanation.md  1 - Hybrid_Search-Dense_Sparse.ipynb  2 - Reranking_Theoretical_Explanation.md  3 - Reranking.ipynb  4_Maximal_Marginal_Relevance_Theoretical_Explanation.md  5 - MMR.ipynb
6 - Query Enhancement/: 0_Query_Expansion_Theoretical_Explanation.md  1 - Query_Expansion_Technique.ipynb  2 - Query_Decomposition_Theoretical_Explanation.md  3 - Query_Decomposition.ipynb  4 - HyDE_Theoretical_Explanation.md  4_HyDE.ipynb
7 - Agentic RAG/: 0_Agentic_RAG_Theoretical_Explanation.md  1_Agentic_RAG.ipynb
8 - Corrective RAG/: 1_Corrective_RAG.ipynb
9 - RAG Evaluation/: 1_RAG_Evaluation.ipynb
(+1 files in other folders)
